--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body {
   justify-content: center;
   height: 100vh;
   padding: 1.5rem;
+  background: var(--clr-very-dark-blue);
 }
 
 .card1 {
@@ -102,16 +103,15 @@ p {
 .numbers {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   margin: 1rem 0 1rem 0;
   gap: 0.935rem;
+  width: 17.438rem;
 }
 
 .numbers button {
   height: 2.625rem;
   width: 2.625rem;
-  /* background: var(--clr-dark-blue);
-  color: var(--clr-medium-grey); */
   border-radius: 50%;
   border: none;
   font-family: var(--ff);
@@ -165,9 +165,111 @@ p {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+  padding: 1.375rem;
+}
+
+.selected {
+  width: 10.5rem;
+  height: 2rem;
+  border-radius: 1.406rem;
+  background: var(--clr-dark-blue);
+  display: grid;
+  place-items: center;
+  color: var(--clr-orange);
+  font-family: var(--ff);
+  font-size: 0.875rem;
+}
+
+.thank-you p {
+  text-align: center;
 }
 
 .hidden {
   visibility: hidden;
   opacity: 0;
+}
+
+@media screen and (min-width: 600px) {
+  .card1 {
+    width: 25.75rem;
+    height: 26rem;
+    border-radius: 1.875rem;
+  }
+
+  .card2 {
+    width: 25.75rem;
+    height: 26rem;
+    border-radius: 1.875rem;
+  }
+
+  .rating {
+    padding: 2rem;
+  }
+  .thank-you {
+    padding: 2rem;
+  }
+
+  .star {
+    height: 3rem;
+    width: 3rem;
+    transform: translateY(-5px);
+  }
+
+  h1 {
+    font-family: var(--ff);
+    font-size: var(--fs-desktop-large);
+    font-weight: var(--fw-700);
+    line-height: 2.153rem;
+    color: var(--clr-white);
+    margin-top: 1.75rem;
+  }
+
+  h2 {
+    font-family: var(--ff);
+    font-size: var(--fs-desktop-large);
+    font-weight: var(--fw-700);
+    line-height: 2.153rem;
+    color: var(--clr-white);
+  }
+
+  p {
+    font-family: var(--ff);
+    font-size: var(--fs-desktop-small);
+    font-weight: var(--fw-400);
+    line-height: 1.5rem;
+    color: var(--clr-light-grey);
+    margin-top: 0.5rem;
+  }
+
+  .numbers {
+    gap: 0.75rem;
+    margin: 1.5rem 0 1.5rem 0;
+    width: 21.313rem;
+  }
+
+  .numbers button {
+    height: 3.188rem;
+    width: 3.188rem;
+  }
+
+  .thank-you p {
+    max-width: 35ch;
+    margin-top: 0;
+  }
+
+  .submit {
+    width: 21.313rem;
+    height: 2.813rem;
+    line-height: 1.187rem;
+    letter-spacing: 0.125rem;
+    margin-top: 0.3rem;
+  }
+
+  .svg {
+    margin-bottom: 1.25rem;
+  }
+
+  .selected {
+    margin-bottom: 1.5rem;
+  }
 }
